# apex-kube-manager

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  SECURITY.md  detail.html  index.html  package-lock.json  package.json  tailwind.config.js  terminal.html  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md
src/: App.svelte  detail.ts  main.ts  terminal.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  kubernetes.rs  lib.rs  main.rs  portforward.rs  pty.rs  watch.rs
src/lib/components/: GlobalSearch.svelte  Header.svelte  LogViewer.svelte  MainPanel.svelte  PortForwardPanel.svelte  Sidebar.svelte  StartupScreen.svelte  Terminal.svelte
src/lib/components/detail/: DeploymentDetail.svelte  DetailWindow.svelte  IngressDetail.svelte  PodDetail.svelte  ResourceDetail.svelte  ServiceDetail.svelte  StatefulSetDetail.svelte
src/lib/components/terminal/: TerminalWindow.svelte
src/lib/components/ui/: Badge.svelte  ConditionsTable.svelte  CustomSelect.svelte  DetailSection.svelte  EventsTable.svelte  InfoCard.svelte  KeyValueGrid.svelte  MetadataSection.svelte  MetricCard.svelte  SortableHeader.svelte  StatusBadge.svelte  TabFilter.svelte  ThemeToggle.svelte  (+5 more)
src/lib/stores/: kubernetes.ts  navigation.ts  portforward.ts  search.ts  startup.ts  theme.ts
src/lib/utils/: sort.ts
src/styles/: app.css
(+20 files in other folders)
