[package]
name = "apex-kube-manager"
version = "0.1.6"
description = "A Kubernetes cluster management application"
authors = ["Apex"]
edition = "2021"

[lib]
name = "apex_kube_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
kube = { version = "0.98", features = ["runtime", "client", "ws"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
futures = "0.3"
tokio-stream = "0.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
dirs = "5"
serde_yaml = "0.9"
urlencoding = "2"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
